Homepage overflow fix

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1396,7 +1396,7 @@ text-align: center;
 }
 
 .featured {
-  margin-right: -13% !important;
+  margin-right: -11% !important;
 }
 
 .storebut {
